Añadidas las fotos

--- a/Prueba.html
+++ b/Prueba.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     Hola
-
+    <p><img src="new-home-car-1267.png"></img></p>
     Adios
+    <p><img src="porsche-model.png"></img></p>
   </body>
 </html>
